--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  location: ^5.0.0
+  image_picker: ^1.1.2
   firebase_core: ^3.3.0
   firebase_messaging: ^15.0.4
   firebase_analytics: 11.2.1
@@ -42,7 +44,10 @@ dependencies:
   flutter_local_notifications: ^17.2.2
   provider: ^6.1.2
   http: ^1.2.2
+  geolocator: ^10.0.1
+  permission_handler: ^11.1.1
 
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
