--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,13 +39,15 @@ dependencies:
   image_picker: ^1.1.2
   firebase_core: ^3.3.0
   firebase_messaging: ^15.0.4
-  firebase_analytics: 11.2.1
+  firebase_analytics: 11.2.1 
   firebase_in_app_messaging: ^0.8.0+4
   flutter_local_notifications: ^17.2.2
   provider: ^6.1.2
   http: ^1.2.2
   geolocator: ^10.0.1
   permission_handler: ^11.1.1
+  google_maps_flutter: ^2.2.1
+  
 
   
 dev_dependencies:
