--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,10 @@ dependencies:
   http: ^1.2.2
   geolocator: ^10.0.1
   permission_handler: ^11.1.1
-  google_maps_flutter: ^2.2.1
-  
+  flutter_keyboard_visibility: ^5.0.3
+  image: ^4.2.0
+  shimmer: ^3.0.0
+  connectivity_plus: ^6.0.5
 
   
 dev_dependencies:
@@ -73,9 +75,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/movil.jfif
+  # - assets/truck.gif
+   
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
