--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     
 
     <application
-        android:label="push_notificaciones"
+        android:label="COGU"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
