--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,12 +50,16 @@ dependencies:
   image: ^4.2.0
   shimmer: ^3.0.0
   connectivity_plus: ^6.0.5
+  smooth_page_indicator: ^1.2.0+3
+  
+  
+  
+  
 
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -64,11 +68,12 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
   flutter_launcher_icons: ^0.14.1
+  
 
 flutter_launcher_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
-  image_path: "assets/cogu_logo_re.png"
+  image_path: "assets/launcher/cogu_logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -83,8 +88,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+  #- assets/movil.jfif
+   - assets/launcher/cogu_logo.png
+   - assets/loading.gif
    - assets/movil.jfif
-  # - assets/truck.gif
    
 
   # An image asset can refer to one or more resolution-specific "variants", see
