--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -53,10 +52,6 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   
   
-  
-  
-
-  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -67,13 +62,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
-  flutter_launcher_icons: ^0.14.1
+  flutter_launcher_icons: ^0.13.1
   
 
-flutter_launcher_icons:
+flutter_icons:
   android: true
   ios: true
-  image_path: "assets/launcher/cogu_logo.png"
+  image_path: "assets/cogu_logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -88,10 +83,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  #- assets/movil.jfif
-   - assets/launcher/cogu_logo.png
-   - assets/loading.gif
-   - assets/movil.jfif
+   - assets/cogu_logo.png
+  # - assets/truck.gif
    
 
   # An image asset can refer to one or more resolution-specific "variants", see
